# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
module_output_path = "external_device_manager/unittest"
device_manager_include_path = "${ext_mgr_path}/services/native/driver_extension_manager/include/device_manager"
bus_extension_include_path = "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb"
utils_include_path = "${ext_mgr_path}/utils/include"

ohos_unittest("device_manager_test") {
  module_out_path = "${module_output_path}"
  sources = [ "device_manager_test.cpp" ]
  include_dirs = [
    "${device_manager_include_path}",
    "${bus_extension_include_path}",
    "${utils_include_path}",
  ]
  deps = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension:bus_extension",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/device_manager:bus_extension_core",
  ]
  external_deps = [
    "c_utils:utils",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
  ]
  configs = [ "${utils_path}:utils_config" ]
}
