# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
module_output_path = "external_device_manager/extension_device_manager"

ohos_unittest("notification_peripheral_test") {
  module_out_path = "${module_output_path}"
  sources = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/device_notification/notification_locale.cpp",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/device_notification/notification_peripheral.cpp",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/event_config.cpp",
    "notification_peripheral_test.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include/device_notification",
    "${ext_mgr_path}/services/native/driver_extension_manager/include",
  ]

  external_deps = [
    "ability_base:zuri",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "i18n:intl_util",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  configs = [ "${utils_path}:utils_config" ]

  defines = [ "private = public" ]
}

ohos_unittest("event_config_test") {
  module_out_path = "${module_output_path}"
  sources = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/event_config.cpp",
    "event_config_test.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/interfaces/innerkits/",
    "${ext_mgr_path}/services/native/driver_extension_manager/include",
  ]

  external_deps = [
    "ability_base:zuri",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "i18n:intl_util",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  configs = [ "${utils_path}:utils_config" ]

  defines = [ "private = public" ]
}

ohos_unittest("notification_locale_test") {
  module_out_path = "${module_output_path}"
  sources = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/device_notification/notification_locale.cpp",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/event_config.cpp",
    "notification_locale_test.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include/device_notification",
    "${ext_mgr_path}/services/native/driver_extension_manager/include",
  ]

  external_deps = [
    "ability_base:zuri",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "i18n:intl_util",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  configs = [ "${utils_path}:utils_config" ]

  defines = [ "private = public" ]
}
