# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_out_path = "external_device_manager/extension_device_manager"

ohos_js_stage_unittest("NdkPermissionJsTest") {
  js_build_mode = "debug"
  hap_profile = "entry/src/main/module.json"
  deps = [
    ":ndkpermissionjstest_js_assets",
    ":ndkpermissionjstest_resources",
  ]
  ets2abc = true
  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "NdkPermissionJsTest"
  subsystem_name = "hdf"
  part_name = "external_device_manager"
  module_out_path = module_out_path
  shared_libraries = [
    "./entry/src/main/cpp:ddk_permission_js_test",
    ":libcppsharedso",
    ":libhmicuucso",
    ":libhmicui18nso",
    ":libcppso",
  ]
}

ohos_prebuilt_shared_library("libcppsharedso") {
  source = rebase_path(libcxx_ndk_shared_file)
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_prebuilt_shared_library("libhmicuucso") {
  if (ohos_indep_compiler_enable) {
    source = rebase_path("//binarys/third_party/icu/innerapis/shared_icuuc/libs/libhmicuuc.z.so")
  } else {
    source = rebase_path("${root_out_dir}/thirdparty/icu/libhmicuuc.z.so")
  }
  external_deps = [ "icu:shared_icuuc" ]
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_prebuilt_shared_library("libhmicui18nso") {
  if (ohos_indep_compiler_enable) {
    source = rebase_path("//binarys/third_party/icu/innerapis/shared_icui18n/libs/libhmicui18n.z.so")
  } else {
    source = rebase_path("${root_out_dir}/thirdparty/icu/libhmicui18n.z.so")
  }
  external_deps = [ "icu:shared_icui18n" ]
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_prebuilt_shared_library("libcppso") {
  dir_path = "${clang_base_path}/../llvm/lib/${abi_target}"
  source = rebase_path("${dir_path}/libc++.so")
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_app_scope("ndkpermissionjstest_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_js_assets("ndkpermissionjstest_js_assets") {
  source_dir = "entry/src/main/ets"
}

ohos_resources("ndkpermissionjstest_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":ndkpermissionjstest_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
