# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/taihe_idl/taihe.gni")

copy_taihe_idl("copy_driverExtensionContext") {
  sources = ["idl/DriverExtensionContext.taihe"]
  #external_deps = []
}

subsystem_name = "hdf"
part_name = "external_device_manager"
taihe_application_file_path = "$taihe_file_path/out/$subsystem_name/$part_name"
taihe_generated_file_path = "$taihe_file_path/out/$subsystem_name/$part_name/application"
native_path = "../../../../services/native"

ohos_taihe("run_taihe") {
  taihe_generated_file_path = "$taihe_generated_file_path"
  deps = [":copy_driverExtensionContext"]
  outputs = [
    "$taihe_generated_file_path/src/DriverExtensionContext.ani.cpp",
    "$taihe_generated_file_path/src/DriverExtensionContext.abi.c"
  ]
}

taihe_shared_library("DriverExtensionContext_native") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  taihe_generated_file_path = "$taihe_generated_file_path"
  part_name = "$part_name"
  subsystem_name = "$subsystem_name"
  sources = get_target_outputs(":run_taihe")
  include_dirs = [
    "include",
    "$native_path/driver_extension/include",
  ]
  sources += [
    "src/ani_constructor.cpp",
    "src/DriverExtensionContext.impl.cpp",
    "$native_path/driver_extension/src/driver_extension_context.cpp",
  ]

  deps = [
    ":run_taihe",
  ]
  
  external_deps = [
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_common",
    "ability_runtime:runtime",
    "ability_runtime:ani_common",
    "runtime_core:ani",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "ipc:rpc_ani",
    "bundle_framework:bms_ani_common",
  ]
}

generate_static_abc("driverExtensionContext_abc") {
  base_url = "$taihe_application_file_path"
  files = ["$taihe_generated_file_path/DriverExtensionContext.ets"]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/driverExtensionContext_abc.abc"
  dependencies = [":run_taihe"]
}

ohos_prebuilt_etc("driverExtensionContext_etc") {
  source = "$target_out_dir/driverExtensionContext_abc.abc"
  module_install_dir = "framework"
  part_name = "$part_name"
  subsystem_name = "$subsystem_name"
  deps=[":driverExtensionContext_abc"]
}

group("driverExtensionContext_taihe") {
  deps = [
    ":driverExtensionContext_etc",
    ":DriverExtensionContext_native",
  ]

  #deps = [":run_taihe"]
}