# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//drivers/external_device_manager/extdevmgr.gni")

module_output_path = "external_device_manager/external_device_manager"
usb_bus_extension_include_path = "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb"
ohos_fuzztest("UsbExtensionFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "${ext_mgr_path}/test/fuzztest/bus_extension_fuzzer/usbextension_fuzzer"

  sources = [ "usbextension_fuzzer.cpp" ]
  include_dirs = [
    "${ext_mgr_path}/frameworks/ddk/usb",
    "${ext_mgr_path}/interfaces/ddk/usb",
    "${usb_bus_extension_include_path}",
  ]
  deps = [ "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension/usb:driver_extension_usb_bus" ]
  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "drivers_interface_usb:libusb_ddk_proxy_1.0",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hilog:libhilog",
  ]
  defines = []
  configs = [ "${utils_path}:utils_config" ]
}
