# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//drivers/external_device_manager/extdevmgr.gni")

module_output_path = "external_device_manager/external_device_manager"
ohos_fuzztest("DriversPkgManagerFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${ext_mgr_path}/test/fuzztest/drivers_pkg_manager_fuzzer/driverpkgmanager_fuzzer"

  sources = [ "driverpkgmanager_fuzzer.cpp" ]
  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include/drivers_pkg_manager",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb",
  ]
  deps = [ "${ext_mgr_path}/services/native/driver_extension_manager/src/drivers_pkg_manager:drivers_pkg_manager" ]
  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hilog:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
  defines = []
  configs = [ "${utils_path}:utils_config" ]
}
