import("//build/ohos.gni")  # Import Compilation Template

config("drvext_manager_public_config") {
  include_dirs = [
    "include",
    "../bus_extension/include",
    "../bus_extension/usb_bus_extension/include",
  ]
}
config("drvext_manager_private_config") {
  include_dirs = [
    "//third_party/jsoncpp/include/json",
  ]
}

ohos_shared_library("drvext_pkg_manager") { # executable module
  sources = [       # Module source code
    "src/driver_pkg_manager.cpp",
    "src/drv_bundle_state_callback.cpp",
  ]
  include_dirs = [] # Module dependency header file directory
  cflags = []
  cflags_c = []
  cflags_cc = []
  ldflags = []
  configs = [
    ":drvext_manager_public_config",
    ":drvext_manager_private_config",
  ]
  public_configs = [
    ":drvext_manager_public_config",
  ]
  deps =[
    "//third_party/jsoncpp:jsoncpp",
    "//drivers/extension_manager/framework/bus_extension:bus_extension",
  ]    # Component internal dependencies

  part_name = "drivers_extension_manager"    # Component name, required
  install_enable = true  # Default installation (default not installed), optional

  external_deps = [
    "drivers_interface_usb:libusb_proxy_1.0",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "os_account:os_account_innerkits"
  ]
}

