# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../../../../../extdevmgr.gni")
ohos_shared_library("bus_extension") {
  sources = [
    "bus_extension.cpp",
    "driver_info.cpp",
    "usb/usb_bus_extension.cpp",
    "usb/usb_dev_subscriber.cpp",
    "usb/usb_driver_info.cpp",
  ]
  include_dirs = [
    "//third_party/jsoncpp/include/json",
    "../../include/bus_extension/usb",
  ]
  configs = [
    "${utils_path}:coverage_flags",
    "${utils_path}:utils_config",
  ]
  deps = [
    "${ext_mgr_path}/services:bus_extension_core",
    "//third_party/jsoncpp:jsoncpp",
  ]
  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_enable = true
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
