# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../../extdevmgr.gni")

ohos_shared_library("driver_extension_dev_callback") {
  install_enable = true
  sources = [ "dev_change_callback.cpp" ]

  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include/device_manager",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/driver_controller",
    "${ext_mgr_path}/interfaces/ddk/hid/",
    "${ext_mgr_path}/interfaces/innerkits/",
  ]
  configs = [ "${utils_path}:utils_config" ]
  deps = [ ":driver_extension_device_manager" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_shared_library("driver_extension_device_manager") {
  install_enable = true
  sources = [
    "device.cpp",
    "etx_device_mgr.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/interfaces/ddk/hid",
    "${ext_mgr_path}/interfaces/innerkits/",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/device_manager",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/drivers_pkg_manager",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/driver_controller",
  ]
  configs = [ "${utils_path}:utils_config" ]
  deps = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/driver_controller:driver_extension_controller",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/drivers_pkg_manager:drivers_pkg_manager",
  ]
  external_deps = [
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
